--- a/chess-game/src/app/app.component.html
+++ b/chess-game/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-chess></app-chess>
+<!-- <app-chess></app-chess> -->
+
+<!-- <app-basic-info></app-basic-info> -->
+<!-- <app-profile-view></app-profile-view> -->
+ 
+ <router-outlet></router-outlet>
+
+ <!-- <app-dialog-box></app-dialog-box> -->
+
+ <!-- <app-game-legends></app-game-legends> -->
