--- a/chess-game/src/app/dialog-box/dialog-box.component.scss
+++ b/chess-game/src/app/dialog-box/dialog-box.component.scss
@@ -1,54 +1,51 @@
 :host {
-	display: block;
-	display: flex;
-	flex-direction: column;
+  display: block;
+  display: flex;
+  flex-direction: column;
+  border: 0.1px solid;
 
-	.rows {
+  .rows {
+    width: 750px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 
-		width: 1000px;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-evenly;
+    span {
+      width: 75px;
+      height: 75px;
 
-		span {
-			border: 1px solid blueviolet;
-			width: 100px;
-			height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-			display: flex;
-			align-items: center;
-			justify-content: center;
+      i {
+        width: 20px;
+        font-size: 30px;
+      }
+    }
 
-			i {
-				width: 20px;
-				font-size: 30px;
-			}
+    .blue {
+      background-color: lightcyan;
+    }
 
-		}
+    .green {
+      background-color: rgb(236, 213, 213);
+    }
 
-		.blue {
-			background-color: lightcyan;
-		}
+    span:active {
+      background-color: aqua;
+      cursor: pointer;
+    }
 
-		.green {
-			background-color: rgb(236, 213, 213);
-		}
+    span:hover {
+      cursor: pointer;
+      background-color: lawngreen;
+    }
+  }
 
-		span:active {
-			background-color: aqua;
-			cursor: pointer;
-		}
-
-		span:hover {
-			cursor: pointer;
-			background-color: lawngreen;
-		}
-	}
-
-	.footer {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-	}
-
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
