--- a/chess-game/src/app/chess/chess.component.scss
+++ b/chess-game/src/app/chess/chess.component.scss
@@ -1,91 +1,116 @@
 :host {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-	.content {
-		width: 200px;
-		height: 720px;
-		background-color: lightblue;
-		display: flex;
-		justify-content: center;
-		padding-top: 40px;
-		// flex-grow: 1;
-	}
+  .profile-image {
+    padding: 30px;
+    display: flex;
 
+    .darkColor {
+      border: 4px outset greenyellow;
+    }
+    .lightColor {
+      border: 4px solid lightblue;
+    }
 
-	.main {
-		position: relative;
-		left: 0%;
-		top: 100px;
-		width: 500px;
-		height: 500px;
+    .image {
+      height: 58px;
+      padding: 6px 6px 0px 6px;
+      width: 58px;
+    }
 
-		.row {
-			display: flex;
-			flex-direction: row;
-			justify-content: space-evenly;
-			align-content: center;
+    .user {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      margin-left: 10px;
+      .name {
+        font-size: 16px;
+        font-weight: 500;
+      }
+      .color {
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+  }
 
-			.column {
-				width: 70px;
-				height: 60px;
-				border: solid 0.5px green;
-				display: flex;
-				flex-direction: row;
-				justify-content: space-evenly;
-				align-items: center;
-				// cursor: pointer;
+  .content {
+    width: 200px;
+    height: 720px;
+    background-color: lightblue;
+    display: flex;
+    justify-content: center;
+  }
 
-				.cell {
-					height: 100%;
-					width: 100%;
-					// font-size: 40px;
-					display: flex;
-					align-items: center;
-					color: red;
-					display: flex;
-					align-items: center;
-					justify-content: center;
+  .main {
+    position: relative;
+    left: 0%;
+    top: 0px; //old 100
+    width: 500px;
+    height: 500px;
+    border: 6px solid black;
 
-					.index {
-						font-size: 14px;
-						color: black;
-					}
+    .row {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-content: center;
 
-					button {
-						i {
-							background-color: none;
-						}
-					}
-				}
-			}
+      .column {
+        width: 70px;
+        height: 62.5px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
 
-			// .item:nth-child(even) {
-			// 	background-color: lightcyan;
-			// }
+        .cell {
+          height: 100%;
+          width: 100%;
+          font-size: 40px;
+          display: flex;
+          align-items: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
-			// .item:nth-child(odd) {
-			// 	background-color: lightgreen;
-			// }
+          .index {
+            font-size: 14px;
+            color: black;
+          }
 
-			.changeColor {
-				background-color: #ebeb0df3;
-			}
-		}
+          button {
+            i {
+              background-color: none;
+              font-size: 30px;
+            }
+          }
+        }
+      }
 
-		.brown {
-			background-color: brown;
-		}
+      .changeColor {
+        background-color: rgb(209, 134, 203);
+        // border: 0.1px solid rgb(168, 165, 165);
+        border: 0.01px solid rgb(216, 224, 208);
+      }
+    }
 
+    .brown {
+      background-color: #86c7df;
+    }
 
-		.green {
-			background-color: none;
-		}
+    .green {
+      background-color: none;
+    }
 
-		.black {
-			background-color: none;
-		}
-	}
-
-
+    .black {
+      background-color: none;
+    }
+  }
+  .red {
+    background-color: red;
+  }
 }
