--- a/chess-game/src/app/dialog-box/dialog-box.component.html
+++ b/chess-game/src/app/dialog-box/dialog-box.component.html
@@ -1,12 +1,17 @@
 <h1 mat-dialog-title>Choose Your Powers</h1>
-<ng-container *ngIf="fakeData.length > 0">
-	<div mat-dialog-content class="rows">
-		<span *ngFor="let cell of fakeData" (click)="onClick(cell)" [ngClass]="cell.isBlackCoin ? 'blue' : 'green'">
-			<i [ngClass]="cell.icon"></i>
-		</span>
-	</div>
+<ng-container *ngIf="data.length > 0">
+  <div mat-dialog-content class="rows">
+    <span
+      *ngFor="let cell of data"
+      (click)="onClick(cell)"
+      [ngClass]="cell.isBlackCoin ? 'blue' : 'green'"
+    >
+      <i [ngClass]="cell.icon"></i>
+    </span>
+  </div>
 </ng-container>
 <div mat-dialog-actions class="footer">
-	<button mat-button mat-dialog-close>Close</button>
-	<button mat-button (click)="submit()">submit</button>
+  <button mat-raised-button color="primary" mat-dialog-close (click)="submit()">
+    submit
+  </button>
 </div>
