demo version 1 viode 1

--- a/chess-game/src/app/chess/chess.component.html
+++ b/chess-game/src/app/chess/chess.component.html
@@ -15,25 +15,33 @@
     </div>
   </div>
 </div>
-<div class="main">
-  <div class="row" *ngFor="let rows of board; let i = index">
-    <div class="column" *ngFor="let cell of rows; let j = index">
-      <div
-        class="cell"
-        (click)="$$selectMember(i, j, cell)"
-        [ngClass]="{
-          changeColor: cell.highlight,
-          brown: cell.color,
-          red: cell.isAlert
-        }"
-      >
-        <!-- {{i}}-{{j}} -->
-        <span *ngIf="cell.clue !== 0">
-          <i [ngClass]="cell.icon"></i>
-        </span>
+<div class="row">
+  <ng-container>
+    <!-- <app-black-kills [data]="BlackKiil"></app-black-kills> -->
+  </ng-container>
+  <div class="main">
+    <div class="row" *ngFor="let rows of board; let i = index">
+      <div class="column" *ngFor="let cell of rows; let j = index">
+        <div
+          class="cell"
+          (click)="$$selectMember(i, j, cell)"
+          [ngClass]="{
+            changeColor: cell.highlight,
+            brown: cell.color,
+            red: cell.isAlert
+          }"
+        >
+          <!-- {{i}}-{{j}} -->
+          <span *ngIf="cell.clue !== 0">
+            <i [ngClass]="cell.icon"></i>
+          </span>
+        </div>
       </div>
     </div>
   </div>
+  <ng-container>
+    <!-- <app-white-kills [data]="whiteKiil"></app-white-kills> -->
+  </ng-container>
 </div>
 <div class="profile-image" *ngIf="playerTwo">
   <span [ngClass]="BlackTurn ? 'darkColor' : 'lightColor'">
