--- a/chess-game/src/styles.scss
+++ b/chess-game/src/styles.scss
@@ -1,21 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-
-html,
-body {
-  height: 100%;
+* {
+  box-sizing: border-box;
 }
-body {
-  margin: 0;
+html,
+body,html
+app-root {
+  padding: 0%;
+  margin: 0%;
+  height: 100%;
+  width: 100%;
+  display: block;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-
